--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/qfind.png"
             ],
             "styles": [
               "src/styles.css"
